Migrating towards dual cjs/esm library

--- a/package.json
+++ b/package.json
@@ -3,29 +3,24 @@
   "version": "l.0.1",
   "author": "Paul Kirkaas",
   "license": "UNLICENSED",
-  "description": "TS/JS Utilities for node apps, including common JS functions",
-  "main": "dist/index",
-  "types": "./dist/index.d.ts",
+  "description": "TS/JS Utilities for SQLite apps, including common & Node JS functions",
+  "type":"module",
+  "module":"./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "default": "./dist/index.js",
-      "require": "./dist/index.js"
+      "types": "./dist/esm/index.d.ts",
+      "default": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     },
-    "./tst-exports": {
-      "types": "./dist/tst-exports.d.ts",
-      "import": "./dist/tst-exports.js",
-      "default": "./dist/tst-exports.js",
-      "require": "./dist/tst-exports.js"
-    },
-    "./tsconfig.json": "./tsconfig.json"
+    "./tsconfig.common.json": "./tsconfig.common.json"
   },
-  "type": "module",
   "engines": {
     "node": ">= 18.0.0"
   },
   "scripts": {
+    "build": "tsc -p ./tsconfig.esm.json && tsc -p ./tsconfig.cjs.json",
     "clean": "rm -rf ./dist ./node_modules package-lock.json"
   },
   "dependencies": {
