--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
     },
-    "./tsconfig.common.json": "./tsconfig.common.json"
+    "./tsconfig.common.json": "./tsconfig.common.json",
+    "./tsconfig.esm.json": "./tsconfig.esm.json",
+    "./tsconfig.cjs.json": "./tsconfig.cjs.json",
+    "./tsconfig.json": "./tsconfig.json"
   },
   "engines": {
     "node": ">= 18.0.0"
