Trying to get libs to work, esp. w. extending tsconfigs...

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,3 +1,7 @@
 {
   "extends":"pk-ts-common-lib/tsconfig.cjs.json",
+    "compilerOptions": {
+    "outDir": "./dist/cjs",
+    "module": "commonjs"
+  },
 }
