--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,43 @@
  * Just for TS-Node...
  */
 {
-  "extends": "pk-ts-node-lib/tsconfig.json",
+  "compilerOptions": {
+    "target": "ES6",
+    "resolvePackageJsonImports": true,
+    "lib": [
+      "es6",
+      "esnext",
+      "dom"
+    ],
+    "esModuleInterop": true,
+    "baseUrl": "./",
+    "declaration": true,
+    "module":"es6",
+    "declarationMap": true,
+    "strict": false,
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "checkJs": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    "allowSyntheticDefaultImports": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowUmdGlobalAccess": true,
+    "allowJs": true,
+    "newLine": "lf",
+    "moduleResolution": "nodenext",
+  },
+  "include": [
+    "./src/**/*",
+  ],
+  "typeRoots": [
+    "node_modules/@types",
+  ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
+    "esm": true
+  },
 }
