--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,24 @@
  * Just for TS-Node...
  */
 {
-  "extends": "./tsconfig.esm.json"
+  "extends": "pk-ts-node-lib/tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./dist/esm",
+    "baseUrl": "./",
+    "target":"es6",
+    "module": "ESNext"
+  },
+  "include": [
+    "./src/**/*",
+  ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
+    "esm": true
+  },
+  "typeRoots": [
+    "node_modules/@types",
+    "src/custom_types/"
+  ]
 }
