--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,7 +1,21 @@
 {
   "extends":"pk-ts-common-lib/tsconfig.cjs.json",
     "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/cjs",
     "module": "commonjs"
   },
+  "include": [
+    "./src/**/*",
+  ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
+    "esm": false,
+  },
+  "typeRoots": [
+    "node_modules/@types",
+    "src/custom_types/"
+  ]
 }
