Update tsconfig.cjs to correct import

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,5 +1,5 @@
 {
-  "extends":"pk-ts-common-lib/tsconfig.cjs.json",
+  "extends":"pk-ts-node-lib/tsconfig.cjs.json",
     "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/cjs",
