--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/cjs",
-    "module": "commonjs"
+    //"module": "commonjs"
   },
   "include": [
     "./src/**/*",
