Some Prisma configs and tests

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "pk-ts-sqlite-lib",
-  "version": "l.0.1",
   "author": "Paul Kirkaas",
   "license": "UNLICENSED",
   "description": "TS/JS Utilities for SQLite apps, including common & Node JS functions",
@@ -22,7 +21,12 @@
   },
   "scripts": {
     "build": "tsc -p ./tsconfig.json && tsc -p ./tsconfig.cjs.json",
+    "pushdb": "npx prisma db push",
+    "seeddb": "npx prisma db seed",
     "clean": "rm -rf ./dist ./node_modules package-lock.json && npm i"
+  },
+  "prisma": {
+    "seed": "node --loader  ts-node/esm ./prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "*",
