--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "build": "tsc -p ./tsconfig.json && tsc -p ./tsconfig.cjs.json",
+    "monitor": "nodemon --exec \"npm run build\" --ext js,jsx,ts,tsx,sass,css --delay 5 --watch ./src",
     "pushdb": "npx prisma db push",
     "seeddb": "npx prisma db seed",
     "generate": "npx prisma generate",
@@ -37,6 +38,7 @@
     "pk-ts-node-lib": "git+https://github.com/pkirkaas/pk-ts-node-lib.git#working",
     "prisma": "*",
     "sqlite": "*",
-    "sqlite3": "*"
+    "sqlite3": "*",
+    "typeorm": "*"
   }
 }
