--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -8,6 +8,14 @@
   "include": [
     "./src/**/*",
   ],
+  "exclude": [
+    "./src/prisma",
+    "./src/prisma/**",
+    "./src/prisma/*",
+    "src/prisma/**",
+    "src/prisma/*",
+    "src/prisma",
+  ],
   "ts-node": {
     "require": [
       "tsconfig-paths/register"
