--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,14 @@
     "./src/**/*",
     "./src/*",
   ],
+  "exclude": [
+    "./src/prisma",
+    "./src/prisma/**",
+    "./src/prisma/*",
+    "src/prisma/**",
+    "src/prisma/*",
+    "src/prisma",
+  ],
   "ts-node": {
     "require": [
       "tsconfig-paths/register"
